# django-svelte-authjs

./: .tool-versions  pyproject.toml  readme.rst
backend/: .gitignore
backend/authentication/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/templates/: home.html
frontend/: .env.local.example  .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/patches/: @auth__core@0.25.1.patch
frontend/src/: app.d.ts  auth.ts  hooks.server.ts
frontend/src/routes/: +layout.svelte  +page.svelte  _nav.svelte
frontend/src/routes/link/: +page.svelte
frontend/src/routes/login/: +page.svelte  +page.ts
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/protected/: +page.server.ts  +page.svelte
frontend/src/routes/session/: +page.svelte
